<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Modifier hold/release is a live, in-session toggle, so it stays on the bar.
         AutoPair and Keep-screen-on moved into SettingsActivity. -->
    <item
        android:id="@+id/check_modifier_state"
        android:title="@string/action_check"
        android:tooltipText="@string/action_tool_tip"
        android:showAsAction="always" />

    <item
        android:id="@+id/ble_app_connection_status"
        android:title="@string/action_ble_status_tool_tip"
        android:icon="@drawable/ic_action_app_not_connected"
        android:tooltipText="@string/action_ble_status_tool_tip"
        android:showAsAction="always" />

    <item
        android:id="@+id/action_keyboard"
        android:icon="@drawable/ic_action_keyboard"
        android:title="@string/action_keyboard_title"
        android:showAsAction="always" />

    <item
        android:id="@+id/action_send_clipboard"
        android:title="@string/action_send_clipboard"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_devices"
        android:title="@string/action_devices"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_disconnect"
        android:title="@string/action_disconnect"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:showAsAction="never" />

</menu>
